--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
     <div class="upper_content">
         <div class="upper_left">
             <div id="upper_left_title">This website is awesome</div>
-            <div>this website has some subtext that goes here under the main title.
-                It's a smaller font and the color is lower contrast
+            <div id="upper_left_content">This website has some subtext that goes here under the main title.
+                It's a smaller font and the color is lower contrast.
             </div>
             <div class="button">Sign up</div>
         </div>
-        <div class="img"></div>
+        <div class="upper_right">
+            <div class="upper_img">This is a placeholder for an image.</div>
+        </div>
     </div>
-    <div class="upper_mid_content">Some random information.
+    <div class="upper_mid_content">
+        Some random information.
         <div class="info_container">
             <div class="info">
                 <div class="img"></div>
@@ -47,18 +50,26 @@
         </div>
     </div>
     <div class="lower_mid_content">
-        This is an inspiring quote, or a testimonial from a customer. Mayber it's just filling up space,
-        or maybe people will actuall read it. Who knows? All I know is that it looks nice.
-        <div id="quote_autor"> -Thor, God of Thunder</div>
+        <div id="quote">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
+            or maybe people will actuall read it. Who knows? All I know is that it looks nice.
+            <div id="quote_autor"> -Thor, God of Thunder</div>
+        </div>        
     </div>
     <div class="lower_content">
-        <div class="lower_left">
-            <div id="lower_content_title">Call to action! It's time!</div>
-            <div>Sign up for our product by clicking that button right over there!</div>
-        </div>
-        <div class="button">Sign up</div>
+        <div class="lower_box">        
+            <div class="lower_left">
+                <div id="lower_content_title">Call to action! It's time!</div>
+                <div>Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="lower_right">
+                <div class="lower_button">Sign up</div>
+            </div>
     </div>
-    <div class="footer">Copyright © The Odin Project 2021</div>
+    </div>
+    <div class="footer">
+        Copyright © The Odin Project 2021
+    </div>
 </body>
 
 </html>
